fix: remove css causing copy to align right

--- a/packages/forms-web-app/src/public/stylesheets/unbranded.css
+++ b/packages/forms-web-app/src/public/stylesheets/unbranded.css
@@ -1470,10 +1470,6 @@ p + .govuk-heading-s,
   }
 }
 
-.js-enabled .govuk-accordion__controls {
-  text-align: right;
-}
-
 .js-enabled .govuk-accordion__icon {
   position: absolute;
   top: 50%;
